# shanks-university

./: .gitignore  CMakeLists.txt  Doxyfile  Levin-Sidi.docx  README.md  Wynn Epsylon and modifications.docx  annotated.html  annotated_dup.js  chang_whynn_algorithm.h  classLambert__W__0__series-members.html  classLambert__W__0__series.html  classLambert__W__0__series.js  classbin__series-members.html  classbin__series.html  classbin__series.js  classcos__series-members.html  classcos__series.html  classcos__series.js  classcosh__series-members.html  classcosh__series.html  classcosh__series.js  classeighth__pi__m__one__third__series-members.html  classeighth__pi__m__one__third__series.html  classeighth__pi__m__one__third__series.js  classepsilon__algorithm-members.html  classepsilon__algorithm.html  classepsilon__algorithm.js  classerf__series-members.html  classerf__series.html  classerf__series.js  classes.html  classexp__m__cos__x__sinsin__x__series-members.html  classexp__m__cos__x__sinsin__x__series.html  classexp__m__cos__x__sinsin__x__series.js  classexp__series-members.html  classexp__series.html  classexp__series.js  classexp__squared__erf__series-members.html  classexp__squared__erf__series.html  classexp__squared__erf__series.js  (+134 more)
shanks_transformation/: CMakeLists.txt  FSA.h  brezinski_theta.h  brezinski_theta_algorithm.h  chang_whynn_algorithm.h  drummond_D_algorithm.h  epsilon_algorithm.h  epsilon_algorithm_three.h  epsilon_algorithm_two.h  levin_algorithm.h  levin_recursion_algorithm.h  levin_sidi.h  levin_sidi_M_algorithm.h  levin_sidi_S_algorithm.h  lubkin_W_algorithm.h  main.cpp  remainders.h  rho_wynn_algorithm.h  richardson_algorithm.h  series +.h  series.h  series_acceleration.h  shanks_transformation.h  shanks_transformation.vcxproj  shanks_transformation.vcxproj.filters  test_framework.h  test_functions.h  weniger.h  weniger_algorithm.h  wynn_numerators.h
shanks_transformation/x64/Debug/: shanks_transformation.exe.recipe  shanks_transformation.ilk  vc143.idb
(+81 files in other folders)
